여기까지 끝!

--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,7 @@
 				margin:0;
 				overflow: hidden;
 				font-family: 'GmarketSans';
+				background-color: #ccc;
 			}
 			@font-face {
 				font-family: 'GmarketSans';
